# dnd-character-builder

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dndcharacterbuilder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/cppparser/: ClassParser.cpp  ClassParser.h  CppParser.cpp  Keys.h  RaceParser.cpp  RaceParser.h
app/src/main/java/com/dndcharacterbuilder/: AddEditCharacterActivity.kt  MainActivity.kt
app/src/main/java/com/dndcharacterbuilder/database/: AppDatabase.kt  Character.kt  CharacterDao.kt  CharacterInfo.kt  Class.kt  ClassDao.kt  DBClearer.kt  DBImportConsts.kt  DBImporter.kt  Race.kt  RaceDao.kt
app/src/main/java/com/dndcharacterbuilder/jsonloader/: CppParser.kt
app/src/main/java/com/dndcharacterbuilder/ui/: BitmapUtils.kt
app/src/main/java/com/dndcharacterbuilder/ui/main/: AddCharacterActivity.kt  BasicDataFragment.kt  CharactersAdapter.kt  CharactersFragment.kt  PageViewModel.kt  PlaceholderFragment.kt  SectionsPagerAdapter.kt  SkillsFragment.kt  SpellcastingFragment.kt
app/src/main/java/com/dndcharacterbuilder/ui/utils/: CharacterDisplayUtils.kt  CreatePopupList.kt  SkillToAbility.kt  Skills.kt  Spellcasting.kt
app/src/main/res/drawable/: ic_add.xml  ic_person.xml  popup_button_background.xml
app/src/main/res/layout/: activity_add_character.xml  activity_main.xml  fragment_basic_data.xml  fragment_characters.xml  fragment_skills.xml  fragment_spellcasting.xml  item_add_character_card.xml  item_character_card.xml  item_popup.xml  popup_menu_item.xml  request_url.xml  skills_table_row.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings-common.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dndcharacterbuilder/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
